@@ -17,6 +17,7 @@ systemd System and Service Manager
  		• remove “kdbus_buffer” field;
  		• remove “fake_creds” field;
  		• add “is_monitor” field;
+ 		• add “accept_fd” field;
  	- struct bus_body_part:
  		• remove “memfd” field;
  	- struct sd_bus_message:
